# ChatbotForTrackingHabits

./: .env.template  .gitignore  README.md  alembic.ini  config.py  docker-compose.yml  loader.py  main.py  pyproject.toml
api/: routes.py
bot/handlers/default_handlers/: echo.py  help.py  start.py
database/: database.py
models/: __init__.py  habit.py  user.py
schemas/: user.py
src/: __init__.py  loader.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_24_2045-cd32cd1762b2_create_tables.py  2024_07_24_2126-e7e3fbb608a5_create_tables.py  2024_08_06_0844-396c84214d9c_create_database.py  2024_08_31_0704-2b1c3df49d79_create_database.py
src/bot/: Dockerfile  __init__.py
src/bot/crud/: __init__.py  create_token.py
src/bot/database/: database.py  models.py
src/bot/handlers/: __init__.py
src/bot/handlers/callback_handlers/: __init__.py  create_habit.py  delete_habit.py  delete_reminder.py  edit_habit.py  get_all_habits.py  get_habit.py  performing_habit.py  set_reminder_habit.py  update_habit.py
src/bot/handlers/custom_handlers/: __init__.py  menu.py
src/bot/handlers/default_handlers/: echo.py  (+3 more)
src/bot/keyboards/: __init__.py  button_edit.py  button_habit.py  button_info.py  button_login.py  button_menu.py
src/bot/schemas/: token.py
src/bot/states/: __init__.py  create_habit_states.py  edit_habit_states.py  info_contact.py  user_state.py
src/bot/utils_bot/: __init__.py  get_user_jwt.py  save_token.py  set_bot_commands.py
src/fast_api/: Dockerfile  __init__.py
src/fast_api/database/: database.py
src/fast_api/routes/: __init__.py  create_habit.py  delete_habit.py  get_habit.py  get_info_user.py  get_list_habits.py  habit.py  lifespan.py  login_user.py  performing_habit.py  registration_user.py  set_reminder.py  update_habit.py
src/fast_api/schemas/: __init__.py  habit.py  user.py
src/fast_api/utils/: __init__.py  jwt_utils.py
src/scheduler/: scheduler.py
utils/: __init__.py  jwt.py
(+3 files in other folders)
