[tool.poetry]
name = "bottracking"
version = "0.1.0"
description = "A chatbot that gives users the ability to effectively manage their habits via Telegram."
authors = ["Evgenator"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pytelegrambotapi = "^4.20.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
