[tool.poetry]
name = "bottracking"
version = "0.1.0"
description = "A chatbot that gives users the ability to effectively manage their habits via Telegram."
authors = ["Evgenator"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pytelegrambotapi = "^4.20.0"
pydantic = "^2.8.2"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
pyngrok = "^7.1.6"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
black = "^24.4.2"
aiohttp = "^3.9.5"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
